# GPU_problem

./: CMakeLists.txt  README.md  convert_model.py  main.cpp
cmake/: FindTensorFlowLiteC.cmake
model_files/: sample.tflite
